# minimal_hik_gimbal_bridge

./: .gitignore  CMakeLists.txt  README.md
bridge/: camera_preview.cpp  camera_preview.hpp  common.cpp  common.hpp  crop_region.hpp  frame.cpp  frame.hpp  frame_preprocessor.cpp  frame_preprocessor.hpp  h264_encoder.cpp  h264_encoder.hpp  hik_camera.cpp  hik_camera.hpp  options.cpp  options.hpp  protocol.hpp  serial_port.cpp  serial_port.hpp  udp_sender.cpp  udp_sender.hpp
config/: bridge.yaml
deploy/autostart/: minimal-hik-gimbal-bridge.desktop.in
scripts/: install-autostart.sh  run-bridge.sh
src/: main.cpp  protocol.hpp
tools/: player_end_emulator.py
